--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-COMMITS_API_URL="http://localhost:3005/api/v1/commits/614058686"
+COMMITS_API_URL="https://commit-history-bff-e8hht.ondigitalocean.app/api/v1/commits/614058686"
